# Perfsets

./: .gitignore  cpu_load.sql  draw_cpu.py  extract_logcat.py  perf  readme.md
draw_cpu_cpp/: .gitignore  CMakeLists.txt  draw_cpu.py  setup.py
draw_cpu_cpp/src/: main.cpp
draw_cpu_cpp/tests/: test_basic.py
sql/: select_logcat.sql  thread_running_slices.sql
